--- a/Meas plan generator/meas_plan_6bus.ipynb
+++ b/Meas plan generator/meas_plan_6bus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,19 +14,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Carrega Rede\n",
-    "Ybus_File = \"ieee-6-bus.txt\"\n",
+    "Ybus_File = \"ieee-30-bus.txt\"\n",
     "Ybus = np.loadtxt(Ybus_File, dtype='i', delimiter=',')\n",
     "terminal_buses = get_terminal_bus(Ybus)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,12 +56,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Parametros da Topologia\n",
     "power_system = Bus_system(Ybus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meas_plan =np.array( [\n",
+    "[1 , 1, 2, 1, 1, 1, 1],\n",
+    "[2 , 2, 3, 1, 1, 2, 1],\n",
+    "[3 , 4, 5, 1, 1, 2, 1],\n",
+    "[4 , 4, 6, 1, 1, 3, 1],\n",
+    "[5 , 5, 4, 1, 1, 3, 1],\n",
+    "[6 , 1, 1, 1, 2, 1, 1],\n",
+    "[7 , 3, 3, 1, 2, 3, 1],\n",
+    "[8 , 5, 5, 1, 2, 5, 1],\n",
+    "[9 , 6, 6, 1, 2, 6, 1],\n",
+    "])"
    ]
   },
   {
@@ -90,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,16 +533,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5.26179330836398"
+       "(9, 5)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,13 +551,12 @@
     "H= build_jacobian_matrix(power_system.Ybus,meas_plan)\n",
     "G= build_gain_matrix(H)\n",
     "E=build_covariance_matrix(G,H)\n",
-    "len(E)\n",
-    "np.linalg.cond(G)"
+    "H.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +577,7 @@
     "    G = build_gain_matrix(H)\n",
     "    E = build_covariance_matrix(G,H)\n",
     "\n",
-    "    print(E)\n",
+    "    print(H)\n",
     "\n",
     "    file = open(filename,'w')\n",
     "    np.savetxt(file, [n_UMs],delimiter=' ',  fmt ='%i')\n",
@@ -572,55 +590,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.82474527  0.06724891 -0.10800582  0.17525473  0.10800582 -0.13129549\n",
-      "   0.05618632  0.04395924 -0.01222707 -0.05618632 -0.23027656 -0.04075691\n",
-      "  -0.03114993 -0.06841339]\n",
-      " [ 0.06724891  0.84628821 -0.08646288 -0.06724891  0.08646288  0.06200873\n",
-      "  -0.03318777 -0.00524017  0.0279476   0.03318777  0.1930131  -0.24017467\n",
-      "   0.02358079  0.06113537]\n",
-      " [-0.10800582 -0.08646288  0.8055313   0.10800582  0.1944687  -0.06928675\n",
-      "   0.02299854  0.03871907  0.01572052 -0.02299854 -0.03726346 -0.28093159\n",
-      "  -0.00756914 -0.00727802]\n",
-      " [ 0.17525473 -0.06724891  0.10800582  0.82474527 -0.10800582  0.13129549\n",
-      "  -0.05618632 -0.04395924  0.01222707  0.05618632  0.23027656  0.04075691\n",
-      "   0.03114993  0.06841339]\n",
-      " [ 0.10800582  0.08646288  0.1944687  -0.10800582  0.8055313   0.06928675\n",
-      "  -0.02299854 -0.03871907 -0.01572052  0.02299854  0.03726346  0.28093159\n",
-      "   0.00756914  0.00727802]\n",
-      " [-0.13129549  0.06200873 -0.06928675  0.13129549  0.06928675  0.78369723\n",
-      "   0.01717613 -0.08500728 -0.10218341 -0.01717613 -0.09112082 -0.00727802\n",
-      "  -0.28413392 -0.11935953]\n",
-      " [ 0.05618632 -0.03318777  0.02299854 -0.05618632 -0.02299854  0.01717613\n",
-      "   0.86404658 -0.03901019  0.09694323  0.13595342 -0.00756914 -0.01018923\n",
-      "  -0.15778748  0.23289665]\n",
-      " [ 0.04395924 -0.00524017  0.03871907 -0.04395924 -0.03871907 -0.08500728\n",
-      "  -0.03901019  0.87103348 -0.08995633  0.03901019  0.13915575  0.03347889\n",
-      "  -0.25298399 -0.05094614]\n",
-      " [-0.01222707  0.0279476   0.01572052  0.01222707 -0.01572052 -0.10218341\n",
-      "   0.09694323 -0.08995633  0.81310044 -0.09694323  0.14672489  0.04366812\n",
-      "  -0.09519651 -0.28384279]\n",
-      " [-0.05618632  0.03318777 -0.02299854  0.05618632  0.02299854 -0.01717613\n",
-      "   0.13595342  0.03901019 -0.09694323  0.86404658  0.00756914  0.01018923\n",
-      "   0.15778748 -0.23289665]\n",
-      " [-0.23027656  0.1930131  -0.03726346  0.23027656  0.03726346 -0.09112082\n",
-      "  -0.00756914  0.13915575  0.14672489  0.00756914  0.42998544  0.15574964\n",
-      "   0.04046579  0.15429403]\n",
-      " [-0.04075691 -0.24017467 -0.28093159  0.04075691  0.28093159 -0.00727802\n",
-      "  -0.01018923  0.03347889  0.04366812  0.01018923  0.15574964  0.47889374\n",
-      "   0.01601164  0.05385735]\n",
-      " [-0.03114993  0.02358079 -0.00756914  0.03114993  0.00756914 -0.28413392\n",
-      "  -0.15778748 -0.25298399 -0.09519651  0.15778748  0.04046579  0.01601164\n",
-      "   0.30509461  0.06259098]\n",
-      " [-0.06841339  0.06113537 -0.00727802  0.06841339  0.00727802 -0.11935953\n",
-      "   0.23289665 -0.05094614 -0.28384279 -0.23289665  0.15429403  0.05385735\n",
-      "   0.06259098  0.48326055]]\n"
+      "[[ 0.  0.  1. ...  0.  0.  0.]\n",
+      " [ 0.  0.  0. ...  1.  0.  0.]\n",
+      " [ 1.  0. -1. ...  0.  0.  0.]\n",
+      " ...\n",
+      " [ 0.  0.  0. ...  1.  0.  0.]\n",
+      " [ 0.  0.  0. ...  1.  0.  0.]\n",
+      " [ 0.  0.  0. ...  1.  0.  0.]]\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mO Kernel falhou ao executar o código na célula atual ou em uma célula anterior. Examine o código nas células para identificar uma possível causa da falha. Clique <a href=\"https://aka.ms/vscodeJupyterKernelCrash\">aqui</a> para obter mais informações. Consulte o <a href='command:jupyter.viewOutput'>log</a> do Jupyter para obter mais detalhes."
      ]
     }
    ],
